fix error unit tests file